--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3"
   }
 }
