--- a/backend-springboot/Projeto/src/main/resources/application.properties
+++ b/backend-springboot/Projeto/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.jpa.hibernate.ddl-auto=update
-jwt.secret=qualquer-coisa-serve-para-testar
+jwt.secret=aaafhdaaasdsdsdsdsdsdds
+
+spring.datasource.url=jdbc:postgresql://${DB_HOST:db}:5432/${DB_NAME:musicmakers_db}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+
+# --- Configuração Dummy de E-mail (Para o servidor não travar) ---
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fake@email.com
+spring.mail.password=fake
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
