--- a/backend-springboot/Projeto/docker-compose.yml
+++ b/backend-springboot/Projeto/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # Serviço do Banco de Dados
   db:
     image: postgres:17-alpine
     container_name: musicmakers-db
@@ -12,13 +11,18 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_new:/var/lib/postgresql/data
     networks:
       - musicmakers-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # Serviço do Backend (Seu Projeto)
   backend:
-    build: .
+    build: 
+      context: .
     container_name: musicmakers-backend
     ports:
       - "8080:8080"
@@ -27,13 +31,16 @@ services:
       - DB_NAME=musicmakers_db
       - DB_USER=postgres
       - DB_PASSWORD=postgres
+      # Habilitar Flyway para rodar a migração ao iniciar
+      - SPRING_FLYWAY_ENABLED=true
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - musicmakers-network
 
 volumes:
-  postgres_data:
+  postgres_data_new:
 
 networks:
   musicmakers-network:
