--- a/backend-springboot/Projeto/src/main/resources/application.properties
+++ b/backend-springboot/Projeto/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret=aaafhdaaasdsdsdsdsdsdds
 
-spring.datasource.url=jdbc:postgresql://${DB_HOST:db}:5432/${DB_NAME:musicmakers_db}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:5433/${DB_NAME:musicmakers_db}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
