--- a/backend-springboot/Projeto/docker-compose.yml
+++ b/backend-springboot/Projeto/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:17-alpine
@@ -31,16 +29,12 @@ services:
       - DB_NAME=musicmakers_db
       - DB_USER=postgres
       - DB_PASSWORD=postgres
-      # Habilitar Flyway para rodar a migração ao iniciar
       - SPRING_FLYWAY_ENABLED=true
+      - SPRING_WEB_RESOURCES_STATIC_LOCATIONS=classpath:/static/,file:/app/resources/static/
+    volumes:
+      - ./src/main/resources/static:/app/resources/static
     depends_on:
       db:
         condition: service_healthy
     networks:
       - musicmakers-network
-
-volumes:
-  postgres_data_new:
-
-networks:
-  musicmakers-network:
