--- a/backend-springboot/Projeto/docker-compose.yml
+++ b/backend-springboot/Projeto/docker-compose.yml
@@ -26,20 +26,16 @@ services:
       - "8080:8080"
     environment:
       - DB_HOST=db
+      - DB_PORT=5432
       - DB_NAME=musicmakers_db
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - SPRING_FLYWAY_ENABLED=true
-      # --- ALTERAÇÃO COMENTADA (DESATIVADA) ---
-      # - SPRING_WEB_RESOURCES_STATIC_LOCATIONS=classpath:/static/,file:/app/resources/static/
     depends_on:
       db:
         condition: service_healthy
     networks:
       - musicmakers-network
-    # --- VOLUME COMENTADO (DESATIVADO) ---
-    # volumes:
-    #   - ./src/main/resources/static:/app/resources/static
 
 volumes:
   postgres_data_new:
